--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*
 Woocommerce-Conversion-Tracking - v1.0.0
-Generated: 2018-01-04 (1515053760694)
+Generated: 2018-01-31 (1517380981075)
 PLEASE DO NOT MODIFY*/
 .wcct-admin {
   /**
@@ -95,6 +95,7 @@ PLEASE DO NOT MODIFY*/
   max-width: 600px;
   border: 1px solid #dfdfdf;
   margin-top: 20px;
+  box-shadow: 1px 2px 1px 0px #dfdfdf;
 }
 .wcct-admin .settings-wrap .integration-wrap .integration-name {
   background: #f7f7f7;
@@ -116,6 +117,13 @@ PLEASE DO NOT MODIFY*/
 .wcct-admin .settings-wrap .integration-wrap .integration-settings input[type="text"] {
   min-width: 300px;
 }
+.wcct-admin .settings-wrap .integration-wrap .integration-settings .wc-ct-form-group {
+  border: 1px solid #dfdfdf;
+  padding: 10px;
+  margin-right: 25px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
 .wcct-admin .settings-wrap .integration-wrap .gateway {
   display: flex;
   flex-flow: 1 1 auto;
@@ -134,6 +142,19 @@ PLEASE DO NOT MODIFY*/
   display: inline-block;
   max-width: 40px;
   height: 18px;
+}
+.wcct-admin .settings-wrap .integration-wrap .single-integration {
+  padding-bottom: 15px !important;
+}
+.wcct-admin .settings-wrap .integration-wrap .event-label {
+  display: none;
+}
+.wcct-admin .settings-wrap .integration-wrap .event-label-space {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.wcct-admin .settings-wrap .integration-wrap .disabled-class {
+  color: #ccc;
 }
 .wcct-admin .sidebar-wrap .premium-box {
   width: 100%;
