--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -105,6 +105,18 @@
         th {
             width: 150px !important;
         }
+
+        td {
+            font-weight: normal;
+        }
+
+        textarea{
+            font-family: monospace;
+        }
+
+        .help {
+            font-weight: normal;
+        }
     }
 
     /**
@@ -164,6 +176,7 @@
                 .gateway-text {
                     margin: 0 30px 0 0;
                     max-width: 90%;
+                    font-size: 1em !important;
                 }
 
                 label {
