--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -10,7 +10,7 @@
         }
 
         .sidebar-wrap {
-            width: 30%;
+            width: 33%;
         }
     }
 
@@ -220,14 +220,52 @@
             padding: 10px 15px;
 
             &.box-green {
-                background: #4CAF50;
+                background: #00AEFF;
                 color: #fff;
             }
 
             &.box-blue {
-                background: #673ab7;
+                color: #fff;
+                background: linear-gradient(to right, #F2709C, #FB9E7E);
+                padding-bottom: 27px;
+
+                p {
+                    font-size: 15px;
+                    font-weight: normal;
+                }
+
+                h3{
+                    color: #fff;
+                }
+
+                .pro-button {
+                    text-decoration: none;
+                    padding: 5px 20px;
+                    background: #fff;
+                    border-radius: 50px;
+                    color: #F37599;
+                }
+                .dashicons-yes {
+                    color: green;
+                    font-size: 1.5em;
+                }
+            }
+
+            .wcct-doc-title{
                 color: #fff;
             }
+
+            .wcct-doc-list {
+
+            }
+
+            .wcct-doc-list li a {
+                text-decoration: none;
+                color: #fff;
+                font-size: 15px;
+            }
+
+
         }
     }
 
