--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*
 Woocommerce-Conversion-Tracking - v1.0.0
-Generated: 2018-01-04 (1515053760694)
+Generated: 2018-02-07 (1518002109390)
 PLEASE DO NOT MODIFY*/
 .wcct-admin {
   /**
@@ -17,7 +17,7 @@ PLEASE DO NOT MODIFY*/
   width: 70%;
 }
 .wcct-admin .wcct-two-column .sidebar-wrap {
-  width: 30%;
+  width: 33%;
 }
 .wcct-admin .switch input {
   display: none;
@@ -91,10 +91,20 @@ PLEASE DO NOT MODIFY*/
 .wcct-admin .custom-table th {
   width: 150px !important;
 }
+.wcct-admin .custom-table td {
+  font-weight: normal;
+}
+.wcct-admin .custom-table textarea {
+  font-family: monospace;
+}
+.wcct-admin .custom-table .help {
+  font-weight: normal;
+}
 .wcct-admin .settings-wrap .integration-wrap {
   max-width: 600px;
   border: 1px solid #dfdfdf;
   margin-top: 20px;
+  box-shadow: 1px 2px 1px 0px #dfdfdf;
 }
 .wcct-admin .settings-wrap .integration-wrap .integration-name {
   background: #f7f7f7;
@@ -116,6 +126,13 @@ PLEASE DO NOT MODIFY*/
 .wcct-admin .settings-wrap .integration-wrap .integration-settings input[type="text"] {
   min-width: 300px;
 }
+.wcct-admin .settings-wrap .integration-wrap .integration-settings .wc-ct-form-group {
+  border: 1px solid #dfdfdf;
+  padding: 10px;
+  margin-right: 25px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
 .wcct-admin .settings-wrap .integration-wrap .gateway {
   display: flex;
   flex-flow: 1 1 auto;
@@ -128,12 +145,26 @@ PLEASE DO NOT MODIFY*/
 .wcct-admin .settings-wrap .integration-wrap .gateway .gateway-text {
   margin: 0 30px 0 0;
   max-width: 90%;
+  font-size: 1em !important;
 }
 .wcct-admin .settings-wrap .integration-wrap .gateway label.switch {
   position: relative;
   display: inline-block;
   max-width: 40px;
   height: 18px;
+}
+.wcct-admin .settings-wrap .integration-wrap .single-integration {
+  padding-bottom: 15px !important;
+}
+.wcct-admin .settings-wrap .integration-wrap .event-label {
+  display: none;
+}
+.wcct-admin .settings-wrap .integration-wrap .event-label-space {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.wcct-admin .settings-wrap .integration-wrap .disabled-class {
+  color: #ccc;
 }
 .wcct-admin .sidebar-wrap .premium-box {
   width: 100%;
@@ -143,10 +174,37 @@ PLEASE DO NOT MODIFY*/
   padding: 10px 15px;
 }
 .wcct-admin .sidebar-wrap .premium-box.box-green {
-  background: #4CAF50;
+  background: #00AEFF;
   color: #fff;
 }
 .wcct-admin .sidebar-wrap .premium-box.box-blue {
-  background: #673ab7;
   color: #fff;
+  background: linear-gradient(to right, #F2709C, #FB9E7E);
+  padding-bottom: 27px;
+}
+.wcct-admin .sidebar-wrap .premium-box.box-blue p {
+  font-size: 15px;
+  font-weight: normal;
+}
+.wcct-admin .sidebar-wrap .premium-box.box-blue h3 {
+  color: #fff;
+}
+.wcct-admin .sidebar-wrap .premium-box.box-blue .pro-button {
+  text-decoration: none;
+  padding: 5px 20px;
+  background: #fff;
+  border-radius: 50px;
+  color: #F37599;
+}
+.wcct-admin .sidebar-wrap .premium-box.box-blue .dashicons-yes {
+  color: green;
+  font-size: 1.5em;
+}
+.wcct-admin .sidebar-wrap .premium-box .wcct-doc-title {
+  color: #fff;
+}
+.wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 15px;
 }
