--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -10,7 +10,7 @@
         }
 
         .sidebar-wrap {
-            width: 30%;
+            width: 33%;
         }
     }
 
@@ -105,6 +105,18 @@
         th {
             width: 150px !important;
         }
+
+        td {
+            font-weight: normal;
+        }
+
+        textarea{
+            font-family: monospace;
+        }
+
+        .help {
+            font-weight: normal;
+        }
     }
 
     /**
@@ -116,6 +128,7 @@
             max-width: @integrationWidth;
             border: 1px solid #dfdfdf;
             margin-top: 20px;
+            box-shadow: 1px 2px 1px 0px #dfdfdf;
 
             .integration-name {
                 background: #f7f7f7;
@@ -140,6 +153,14 @@
                 input[type="text"] {
                     min-width: 300px;
                 }
+
+               .wc-ct-form-group {
+                    border: 1px solid #dfdfdf;
+                    padding: 10px;
+                    margin-right: 25px;
+                    margin-bottom: 15px;
+                    margin-top: 15px;
+                }
             }
 
             .gateway {
@@ -155,6 +176,7 @@
                 .gateway-text {
                     margin: 0 30px 0 0;
                     max-width: 90%;
+                    font-size: 1em !important;
                 }
 
                 label {
@@ -165,6 +187,22 @@
                         height: 18px;
                     }
                 }
+            }
+
+            .single-integration {
+                padding-bottom: 15px !important;
+            }
+
+            .event-label{
+                display:none;
+            }
+
+            .event-label-space{
+                margin-top: 8px;
+                margin-bottom: 8px;
+            }
+            .disabled-class{
+                color:#ccc;
             }
         }
     }
@@ -182,14 +220,52 @@
             padding: 10px 15px;
 
             &.box-green {
-                background: #4CAF50;
+                background: #00AEFF;
                 color: #fff;
             }
 
             &.box-blue {
-                background: #673ab7;
+                color: #fff;
+                background: linear-gradient(to right, #F2709C, #FB9E7E);
+                padding-bottom: 27px;
+
+                p {
+                    font-size: 15px;
+                    font-weight: normal;
+                }
+
+                h3{
+                    color: #fff;
+                }
+
+                .pro-button {
+                    text-decoration: none;
+                    padding: 5px 20px;
+                    background: #fff;
+                    border-radius: 50px;
+                    color: #F37599;
+                }
+                .dashicons-yes {
+                    color: green;
+                    font-size: 1.5em;
+                }
+            }
+
+            .wcct-doc-title{
                 color: #fff;
             }
+
+            .wcct-doc-list {
+
+            }
+
+            .wcct-doc-list li a {
+                text-decoration: none;
+                color: #fff;
+                font-size: 15px;
+            }
+
+
         }
     }
 
