--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -97,6 +97,7 @@
         display: block;
         overflow: hidden;
         margin-top: 30px;
+        padding-bottom: 10px;
     }
 
     .custom-table {
@@ -124,11 +125,16 @@
      */
     .settings-wrap {
 
+        h4 {
+            margin-top: 5px;
+        }
+
         .integration-wrap {
             max-width: @integrationWidth;
             border: 1px solid #dfdfdf;
             margin-top: 20px;
             box-shadow: 1px 2px 1px 0px #dfdfdf;
+            background: #fff;
 
             .integration-name {
                 background: #f7f7f7;
