--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -182,7 +182,7 @@
                 .gateway-text {
                     margin: 0 30px 0 0;
                     max-width: 90%;
-                    font-size: 1em !important;
+                    font-size: 1.2em;
                 }
 
                 label {
@@ -217,6 +217,7 @@
      * Sidebar Area
      */
     .sidebar-wrap {
+        margin-top: 15px;
 
         .premium-box {
             width: 100%;
