--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*
 Woocommerce-Conversion-Tracking - v1.0.0
-Generated: 2018-02-12 (1518428269591)
+Generated: 2018-02-13 (1518522122945)
 PLEASE DO NOT MODIFY*/
 .wcct-admin {
   /**
@@ -112,13 +112,12 @@ PLEASE DO NOT MODIFY*/
   max-width: 600px;
   border: 1px solid #dfdfdf;
   margin-top: 20px;
-  box-shadow: 1px 2px 1px 0px #dfdfdf;
   background: #fff;
 }
 .wcct-admin .settings-wrap .integration-wrap .integration-name {
-  background: #f7f7f7;
-  padding: 10px 15px;
-  border-bottom: 1px solid #dfdfdf;
+  background: #ffffff;
+  padding: 21px 15px;
+  border-bottom: 1px solid #f1f1f1;
 }
 .wcct-admin .settings-wrap .integration-wrap .integration-settings {
   background: #fff;
@@ -147,6 +146,11 @@ PLEASE DO NOT MODIFY*/
 .wcct-admin .settings-wrap .integration-wrap .gateway {
   display: flex;
   flex-flow: 1 1 auto;
+}
+.wcct-admin .settings-wrap .integration-wrap .gateway img {
+  height: 35px;
+  margin-right: 15px;
+  margin-top: -9px;
 }
 .wcct-admin .settings-wrap .integration-wrap .gateway label,
 .wcct-admin .settings-wrap .integration-wrap .gateway .gateway-text {
@@ -185,15 +189,15 @@ PLEASE DO NOT MODIFY*/
   min-height: 100px;
   margin-bottom: 25px;
   box-sizing: border-box;
-  padding: 10px 15px;
+  padding: 10px 20px;
+  border: 1px solid #dfdfdf;
 }
 .wcct-admin .sidebar-wrap .premium-box.box-green {
-  background: #00AEFF;
-  color: #fff;
+  background: #ffffff;
 }
 .wcct-admin .sidebar-wrap .premium-box.box-blue {
-  color: #fff;
-  background: linear-gradient(to right, #F2709C, #FB9E7E);
+  color: #444;
+  background: #fff;
   padding-bottom: 27px;
 }
 .wcct-admin .sidebar-wrap .premium-box.box-blue p {
@@ -201,7 +205,7 @@ PLEASE DO NOT MODIFY*/
   font-weight: normal;
 }
 .wcct-admin .sidebar-wrap .premium-box.box-blue h3 {
-  color: #fff;
+  color: #444;
 }
 .wcct-admin .sidebar-wrap .premium-box.box-blue .pro-button {
   text-decoration: none;
@@ -214,13 +218,40 @@ PLEASE DO NOT MODIFY*/
   color: green;
   font-size: 1.5em;
 }
+.wcct-admin .sidebar-wrap .premium-box.box-blue .premium-feature-list li img {
+  width: 17px;
+  margin-right: 10px;
+}
 .wcct-admin .sidebar-wrap .premium-box .wcct-doc-title {
-  color: #fff;
+  color: #444;
+}
+.wcct-admin .sidebar-wrap .premium-box .wcct-doc-list {
+  display: flex;
+  flex-flow: row wrap;
+}
+.wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li {
+  list-style: none;
+  text-align: center;
+  margin: 5px;
+  flex: 0 1 calc(31.333%);
+  display: list-item;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
 }
 .wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li a {
+  font-size: 13px;
+  color: #444;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all ease .3s;
   text-decoration: none;
-  color: #fff;
-  font-size: 15px;
+  outline: 0 !important;
+}
+.wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li .doc-list-icon {
+  width: 25px;
+  margin: 10px auto;
 }
 .wcct-admin .wcct-tooltip {
   position: relative;
