Styles and tweaks
Signed-off-by: Tareq Hasan <tareq1988@gmail.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*
 Woocommerce-Conversion-Tracking - v1.0.0
-Generated: 2018-02-19 (1519031925585)
+Generated: 2018-02-20 (1519108668998)
 PLEASE DO NOT MODIFY*/
 .wcct-admin {
   /**
@@ -110,13 +110,14 @@ PLEASE DO NOT MODIFY*/
 }
 .wcct-admin .settings-wrap .integration-wrap {
   max-width: 600px;
-  border: 1px solid #dfdfdf;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   margin-top: 20px;
   background: #fff;
 }
 .wcct-admin .settings-wrap .integration-wrap .integration-name {
   background: #ffffff;
-  padding: 21px 15px;
+  padding: 15px 15px;
   border-bottom: 1px solid #f1f1f1;
 }
 .wcct-admin .settings-wrap .integration-wrap .integration-settings {
@@ -138,19 +139,19 @@ PLEASE DO NOT MODIFY*/
   padding: 10px;
   margin-right: 25px;
   margin-bottom: 15px;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 .wcct-admin .settings-wrap .integration-wrap .integration-settings .wcct-border {
-  border: 1px solid #ddd;
+  border: 1px solid #e5e5e5;
 }
 .wcct-admin .settings-wrap .integration-wrap .gateway {
   display: flex;
   flex-flow: 1 1 auto;
 }
 .wcct-admin .settings-wrap .integration-wrap .gateway img {
-  height: 35px;
+  height: 26px;
+  width: auto;
   margin-right: 15px;
-  margin-top: -9px;
 }
 .wcct-admin .settings-wrap .integration-wrap .gateway label,
 .wcct-admin .settings-wrap .integration-wrap .gateway .gateway-text {
@@ -161,12 +162,14 @@ PLEASE DO NOT MODIFY*/
   margin: 0 30px 0 0;
   max-width: 90%;
   font-size: 1.2em;
+  line-height: 26px;
 }
 .wcct-admin .settings-wrap .integration-wrap .gateway label.switch {
   position: relative;
   display: inline-block;
   max-width: 40px;
   height: 18px;
+  margin-top: 5px;
 }
 .wcct-admin .settings-wrap .integration-wrap .single-integration {
   padding-bottom: 15px !important;
@@ -223,9 +226,18 @@ PLEASE DO NOT MODIFY*/
   color: green;
   font-size: 1.5em;
 }
-.wcct-admin .sidebar-wrap .premium-box.box-blue .premium-feature-list li img {
-  width: 17px;
+.wcct-admin .sidebar-wrap .premium-box.box-blue ul.premium-feature-list {
+  margin-bottom: 15px;
+}
+.wcct-admin .sidebar-wrap .premium-box.box-blue .premium-feature-list li:before {
+  content: "\f147";
+  font-family: dashicons;
+  display: inline-block;
+  background: #64b450;
+  color: #fff;
+  padding: 0 3px;
   margin-right: 10px;
+  border-radius: 50%;
 }
 .wcct-admin .sidebar-wrap .premium-box .wcct-doc-title {
   color: #444;
@@ -238,39 +250,38 @@ PLEASE DO NOT MODIFY*/
   list-style: none;
   text-align: center;
   margin: 5px;
-  flex: 0 1 calc(31.333%);
+  flex: 0 1 100%;
   display: list-item;
   box-sizing: border-box;
   border: 1px solid #ddd;
+  border-radius: 3px;
+  padding: 0 0 15px 0;
 }
 .wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li a {
+  text-decoration: none;
   font-size: 13px;
   color: #444;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transition: all ease .3s;
-  text-decoration: none;
-  outline: 0 !important;
+  display: block;
 }
-.wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li .doc-list-icon {
-  width: 25px;
+.wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li img.doc-list-icon {
+  display: block;
+  width: 24px;
+  height: auto;
   margin: 10px auto;
 }
-@media (max-width: 1366px) {
+@media (min-width: 768px) {
   .wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li {
-    flex: 0 1 calc(30%);
+    flex: 0 1 100%;
   }
 }
-@media (max-width: 1280px) {
+@media (min-width: 992px) {
   .wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li {
-    flex: 0 1 calc(29.5%);
+    flex: 0 1 calc(45%);
   }
 }
-@media (max-width: 1024px) {
+@media (min-width: 1367px) {
   .wcct-admin .sidebar-wrap .premium-box .wcct-doc-list li {
-    flex: 0 2 calc(45%);
+    flex: 0 1 calc(28%);
   }
 }
 .wcct-admin .wcct-tooltip {
